@@ -761,7 +761,7 @@ public class JSONArray implements Iterable<Object> {
 	 */
 	public JSONArray put( double value )
 	{
-		Double d = new Double( value );
+		Double d = Double.valueOf( value );
 		JSONObject.testValidity( d );
 		this.put( d );
 		return this;
@@ -775,7 +775,7 @@ public class JSONArray implements Iterable<Object> {
 	 */
 	public JSONArray put( int value )
 	{
-		this.put( new Integer( value ) );
+		this.put( Integer.valueOf( value ) );
 		return this;
 	}
 
@@ -787,7 +787,7 @@ public class JSONArray implements Iterable<Object> {
 	 */
 	public JSONArray put( long value )
 	{
-		this.put( new Long( value ) );
+		this.put( Long.valueOf( value ) );
 		return this;
 	}
 
@@ -863,7 +863,7 @@ public class JSONArray implements Iterable<Object> {
 	 */
 	public JSONArray put( int index, double value )
 	{
-		this.put( index, new Double( value ) );
+		this.put( index, Double.valueOf( value ) );
 		return this;
 	}
 
@@ -878,7 +878,7 @@ public class JSONArray implements Iterable<Object> {
 	 */
 	public JSONArray put( int index, int value )
 	{
-		this.put( index, new Integer( value ) );
+		this.put( index, Integer.valueOf( value ) );
 		return this;
 	}
 
@@ -893,7 +893,7 @@ public class JSONArray implements Iterable<Object> {
 	 */
 	public JSONArray put( int index, long value )
 	{
-		this.put( index, new Long( value ) );
+		this.put( index, Long.valueOf( value ) );
 		return this;
 	}
 
